# VehicleManagementSystem

./: CMakeLists.txt  VehicleManagementSystemSQL.txt  checklist.md  docker-compose.yaml  nginx_conf.conf  nginx_conf.txt
common/: CMakeLists.txt
common/include/: base.h  controller_management_base.h  corw.h  database.h
common/include/jwt/traits/kazuho-picojson/: traits.h
config/: port.h
dispatch_management/: CMakeLists.txt
dispatch_management/include/model/: driver.h  task.h  vehicle.h
dispatch_management/include/service/: dispatch_management.h
dispatch_management/src/interface/: dispatch_management_api.cpp
dispatch_management/src/service/: dispatch_management.cpp
order_management/: CMakeLists.txt
order_management/include/service/: order_management.h
order_management/src/interface/: order_management_api.cpp
order_management/src/service/: order_management.cpp
user_management/: CMakeLists.txt
user_management/include/model/: staff.h
user_management/include/service/: user_management.h
user_management/src/interface/: user_management_api.cpp
user_management/src/service/: user_management.cpp
